stupidity.txt
> Task :compileJava
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\QuickAccessScreen.java:30: error: variable toggleXrayButton might not have been initialized
                    toggleXrayButton.setMessage(Text.literal(StateSettings.isXrayEnabled() ? "Disable X-Ray" : "Enable X-Ray"));
                    ^
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\gui\QuickAccessScreen.java:40: error: variable scanButton might not have been initialized
                    scanButton.setMessage(Text.literal(!wasActive ? "Stop Scanning" : "Start Scanning"));
                    ^
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\xray\XRayRenderer.java:31: error: invalid method reference
        RenderSystem.setShader(GameRenderer::getPositionProgram);
                               ^
  cannot find symbol
    symbol:   method getPositionProgram()
    location: class GameRenderer
C:\Users\Zenny\Desktop\NeoporiumScanner1.2\src\main\java\com\emperium\neoporiumscanner\xray\XRayRenderer.java:51: error: cannot find symbol
        BufferRenderer.drawWithGlobalProgram(buffer.endOrDiscardEmpty());
                                                   ^
  symbol:   method endOrDiscardEmpty()
  location: variable buffer of type BufferBuilder
4 errors

> Task :compileJava FAILED
